--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
 title: Michael's Page
 description: For hosting my school comp sci projects
